@@ -50,6 +50,7 @@ Bugs fixed:
 - 3498044 RIEnabled conflicts with settable retries
 - 3426027 cimAccountPassThrough does not set return code
 - 3498719 Better SSL error reporting for sfcb
+- 3471814 segfault in objectImpl.c:131,ClObjectGetClString
 
 Changes in 1.3.13
 =================
